
AUTOMAKE_OPTIONS = foreign

SUBDIRS = src

noinst_HEADERS = src/qore-glut.h src/GlutVoidPtrType.h

ACLOCAL_AMFLAGS=-I m4

EXTRA_DIST = COPYING ChangeLog AUTHORS README \
	RELEASE-NOTES \
	test/atlantis.q \
	test/gears2.q \
	test/gears.q \
	test/hanoi.q \
	test/morph3d.q \
	test/opengl-logo.q \
	test/shadowtex.q \
	qore-glut-module.spec
